4th version of box when scrolling on mobile fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -91,6 +91,7 @@ html {
 @media (max-width: 768px) {
   body {
     padding: 112px 0px 0px 0px;
+    background-attachment: scroll;
   }
 
   .hero-section,
